Fix : 홈 화면 조회 날짜 형식 수정 및 collect()를 toList()로 변경 #75